# bexpeng

./: .gitignore  README.md  build_release.py  pyproject.toml  upload_release.py
bexpeng/: __init__.py  api.py  engine.py  groups.py  operators.py  panels.py  parser.py  persistence.py  properties.py
docs/: example-two-addons.md  how-it-works.md
scripts/: dev_environment_vscode_config.py  run_tests.py
tests/: test_engine.py  test_groups.py  test_parser.py
